@@ -17,7 +17,7 @@ public class StubHandlingMiddleware
 {
     private static readonly string[] _segmentsToIgnore =
     {
-        "/ph-api", "/ph-ui", "/ph-static", "swagger", "/requestHub", "/scenarioHub"
+        "/ph-api", "/ph-ui", "/ph-static", "swagger", "/requestHub", "/scenarioHub", "/stubHub"
     };
 
     private readonly IClientDataResolver _clientDataResolver;
